5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4081/executions/1643_2447.log
== TEST (2019-04-10 19:13:49) 
-- CODE:
preço=float(input("preço:")
paga=float(input("pagamento: "))
fal=round(paga-preço, 2)
sub=round(preço-paga, 2)
if(preço>paga):
	print("Falta X", fal)
else:
	print("Troco de Y", sub)			
-- ERROR:
File "XXXX", line 2
    paga=float(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:14:44) 
-- CODE:
preço=float(input("preço:")
paga=float(input("pagamento: "))
fal=round(paga-preço, 2)
sub=round(preço-paga, 2)
if(preço>paga):
	print("Falta", fal)
else:
	print("Troco de ", sub)			
-- ERROR:
File "XXXX", line 2
    paga=float(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:15:48) 
-- CODE:
preco=float(input("preco:"))
paga=float(input("pagamento: "))
fal=round(paga-preco, 2)
sub=round(preco-paga, 2)
if(preco>paga):
	print("Falta", fal)
else:
	print("Troco", sub)			
-- OUTPUT:
Falta -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:15:59) 
-- CODE:
preco=float(input("preco:"))
paga=float(input("pagamento: "))
fal=round(paga-preco, 2)
sub=round(preco-paga, 2)
if(preco>paga):
	print("Falta", fal)
else:
	print("Troco", sub)			
-- EXECUTION TIME:
0.200007
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta -26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco -28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:16:05) 
-- CODE:
preco=float(input("preco:"))
paga=float(input("pagamento: "))
fal=round(paga-preco, 2)
sub=round(preco-paga, 2)
if(preco>paga):
	print("Falta", fal)
else:
	print("Troco", sub)			
-- OUTPUT:
Falta -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:16:37) 
-- CODE:
preco=float(input("preco:"))
paga=float(input("pagamento: "))
fal=round(paga-preco, 2)
sub=round(preco-paga, 2)
if(paga>preco):
	print("Falta", fal)
else:
	print("Troco", sub)			
-- OUTPUT:
Troco 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:16:45) 
-- CODE:
preco=float(input("preco:"))
paga=float(input("pagamento: "))
fal=round(paga-preco, 2)
sub=round(preco-paga, 2)
if(paga>preco):
	print("Falta", fal)
else:
	print("Troco", sub)			
-- EXECUTION TIME:
0.145079
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Troco 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Falta 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:16:47) 
-- CODE:
preco=float(input("preco:"))
paga=float(input("pagamento: "))
fal=round(paga-preco, 2)
sub=round(preco-paga, 2)
if(paga>preco):
	print("Falta", fal)
else:
	print("Troco", sub)			
-- OUTPUT:
Troco 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:17:38) 
-- CODE:
preco=float(input("preco:"))
paga=float(input("pagamento: "))
fal=round(paga-preco, 2)
sub=round(preco-paga, 2)
if(preco>paga):
	print("Falta de", fal)
else:
	print("Troco de", sub)			
-- OUTPUT:
Falta de -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:18:33) 
-- CODE:
preco=float(input("preco:"))
paga=float(input("pagamento: "))
sub=round(preco-paga, 2)
fal=round(paga-preco, 2)
if(preco>paga):
	print("Falta de", fal)
else:
	print("Troco de", sub)			
-- OUTPUT:
Falta de -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:18:45) 
-- CODE:
preco=float(input("preco:"))
paga=float(input("pagamento: "))
sub=round(preco-paga, 2)
fal=round(paga-preco, 2)
if(preco>paga):
	print("Falta de", fal)
else:
	print("Troco de", sub)			
-- OUTPUT:
Falta de -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:19:17) 
-- CODE:
preco=float(input("preco:"))
paga=float(input("pagamento: "))
sub=round(preco-paga, 2)
fal=round(paga-preco, 2)
if(preco>paga):
	print("Falta de", sub)
else:
	print("Troco de", fal)			
-- OUTPUT:
Falta de 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:19:28) 
-- CODE:
preco=float(input("preco:"))
paga=float(input("pagamento: "))
sub=round(preco-paga, 2)
fal=round(paga-preco, 2)
if(preco>paga):
	print("Falta de", sub)
else:
	print("Troco de", fal)			
-- EXECUTION TIME:
0.169115
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta de 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:19:34) 
-- CODE:
preco=float(input("preco:"))
paga=float(input("pagamento: "))
sub=round(preco-paga, 2)
fal=round(paga-preco, 2)
if(preco>paga):
	print("Falta de", sub)
else:
	print("Troco de", fal)			
-- OUTPUT:
Falta de 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:20:01) 
-- CODE:
preco=float(input("preco:"))
paga=float(input("pagamento: "))
sub=round(preco-paga, 2)
fal=round(paga-preco, 2)
if(preco>paga):
	print("Falta de", sub)
else:
	print("Troco de", fal)			
-- EXECUTION TIME:
0.171246
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta de 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:22:01) 
-- CODE:
preco=float(input("preco:"))
paga=float(input("pagamento: "))
sub=round(preco-paga, 2)
fal=round(paga-preco, 2)
if(preco>paga):
	print("Falta de", sub)
else:
	print("Troco de", fal)			
-- OUTPUT:
Falta de 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:22:14) 
-- CODE:
preco=float(input("preco:"))
paga=float(input("pagamento: "))
sub=round(preco-paga, 2)
fal=round(paga-preco, 2)
if(preco>paga):
	print("Falta de", sub)
else:
	print("Troco de", fal)			
-- EXECUTION TIME:
0.138356
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta de 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:22:53) 
-- CODE:
preco=float(input("preco:"))
paga=float(input("pagamento: "))
sub=round(preco-paga, 2)
fal=round(paga-preco, 2)
if(preco>paga):
	print("Falta ", sub)
else:
	print("Troco de", fal)			
-- OUTPUT:
Falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:23:03) 
-- CODE:
preco=float(input("preco:"))
paga=float(input("pagamento: "))
sub=round(preco-paga, 2)
fal=round(paga-preco, 2)
if(preco>paga):
	print("Falta ", sub)
else:
	print("Troco de", fal)			
-- EXECUTION TIME:
0.141607
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
